--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,9 @@
+- Changelog for v1.0 (2021-08-02)
+    * Add $cal
+    * Changed "MP" to "messages privés"
+
+(incomplete changelog)
+
 - Changelog for v0.9 (2021-06-21)
     * Add $edit
     * Add get_credi, get_name, get_version
