--- a/changelog.txt
+++ b/changelog.txt
@@ -1,14 +1,17 @@
-- Changelog for v1.0 (2021-08-02)
+- Changelog for v1.0.1 (2021-08-03)
+    * Attempt to fix $jdr
+
+- Changelog for v1.0.0 (2021-08-02)
     * Add $cal
     * Changed "MP" to "messages privés"
 
 (incomplete changelog)
 
-- Changelog for v0.9 (2021-06-21)
+- Changelog for v0.9.0 (2021-06-21)
     * Add $edit
     * Add get_credi, get_name, get_version
 
-- Changelog for v0.8 (2021-06-21)
+- Changelog for v0.8.0 (2021-06-21)
     * Create changelog.txt
     * Renamed project folder
   
