--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+- Changelog for v1.0.4 (2021-08-06)
+    * urplanning.unionrolistes.fr -> planning.unionrolistes.fr
+
 - Changelog for v1.0.3 (2021-08-06)
     * Auto create /tmp/usr/cal for $jdr
 
