--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+- Changelog for v1.1.0 (2021-08-08)
+    * Writing webhook in  a file instead of URL
+
 - Changelog for v1.0.4 (2021-08-06)
     * urplanning.unionrolistes.fr -> planning.unionrolistes.fr
 
