--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,7 @@
-- Changelog for v1.1.0 (2021-08-08)
+- Changelog for v1.1.6 (2021-08-11)
+    * Writing webhook in  a file instead of URL (again)
+
+- Changelog for v1.1.5 (2021-08-08)
     * Writing webhook in  a file instead of URL
 
 - Changelog for v1.0.4 (2021-08-06)
