--- a/TODO.txt
+++ b/TODO.txt
@@ -5,6 +5,8 @@ utiliser plutôt Reaction.message pour obtenir le message
 https://discord.com/api/webhooks/857045646220984350/62viiYTAQEislCPUzijqUSBL41en2XXdWskpYpi_ZhgQamwBtzfwUBFo8A1iG4iytyAX
 webhook through get for development purpose
 
+Déplacer $site quelque part dans Bot_Base
+
 """
 Le bot discord de l'Union des Rôlistes a pour but d'automatiser l'organisation
 de parties de JDR et des différentes tâches d'administration.
