--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+- Changelog for v1.2.0 (2021-08-13)
+    * Added $site
+
 - Changelog for v1.1.7 (2021-08-12)
     * Update README with install steps
     * Added license text in main code files
